# WEO

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WEO.py  WEO_old.py  argument_aggregator.py  config_manager.py  logger.py  orchestrator.py  orchestrator_factory.py  pyinstaller.py  pyproject.toml  weo_environment.py  weo_environment_action.py  wsl_api.py  wsl_registry.py
.github/workflows/: release.yml
ansible/: ansible.cfg  inventory.in.yml  playbook.yml
ansible/roles/basic/: BasicEnvironment.py
ansible/roles/basic/defaults/: main.yml
ansible/roles/basic/tasks/: create.yml
ansible/tasks/: create.yml  import.yml
ansible/vars/: main.yml
assets/: license.rtf
config/: config_manager.py  version.py  weo_config.py  wsl_config.py
environments/zephyr/: README.md  ansible.cfg  inventory.yml  playbook.yml
environments/zephyr/roles/wsl/tasks/: create.yml
environments/zephyr/tasks/: delete.yml
exceptions/: ConfigNotFoundError.py  EnvironmentExistsError.py  EnvironmentNotFoundError.py  ImageNotSupportedError.py  OrchestratorError.py  OrchestratorIncompatibleError.py  OrchestratorNotInitialzedError.py  UserNotFoundError.py  WeoError.py
orchestrator/: orchestrator.py  orchestrator_factory.py
scripts/: orchestrator_template_init.sh  template_init.sh
src/: main.rs  orchestrator.rs  orchestrator_factory.rs
src/docker_api/: linux_docker_api.rs  mod.rs
src/docker_api/windows_docker_api/: mod.rs  windows_helper_instance.rs
src/wsl_api/: mod.rs
wsl/: docker_daemon.py  wsl_api.py
