[project]
name = "WEO"
version = "0.1.0"
description = "WEO - WSL Environment Orchestrator"
authors = [
    {name = "Vec7or", email = "vec7or@secmessage.ch"},
]
readme = "README.md"

[tool.poetry]
name = "WEO"
version = "0.1.0"
description = "WEO - WSL Environment Orchestrator"
authors = [
    "Vec7or <vec7or@secmessage.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.31.0"
pyinstaller = "^6.1.0"
pylint = "^3.0.2"
pydantic = "^2.6.0"
click = "^8.1.7"
semver = "^3.0.2"
cx-freeze = "^7.2.7"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cxfreeze]
executables = [
    { script = "WEO.py", base = "console" }
]

[tool.cxfreeze.build_exe]
excludes = []
zip_include_packages = []

[tool.cxfreeze.bdist_msi]
target_name = "weo_development"
initial_target_dir = "[ProgramFiles64Folder]WEO"
add_to_path = true
install_icon = "./assets/weo_logo.ico"
license_file = "./assets/license.rtf"
all_users = false
